Update README.md
included description of space race and instructions on how to run the game